# Challenge_Solving

./: README.md  README.rst  pyproject.toml
Ejercicio1/: 1-a.sql  1-b.sql  1-c-1.sql  1-c-2.sql
Python_ejercicio_1y2/: beers.py  connector_tests.py  users.py
Python_ejercicio_1y2/clients/: ClientLogger.py  ClientProcessing.py  ClientS3.py  ClientSesPSQL.py  ClientSpark.py
Python_ejercicio_1y2/queries/: DDLT-beers.sql  DDLT-users.sql
Python_ejercicio_1y2/utils/: cred.json  psql_config.json
